--- a/estilos.css
+++ b/estilos.css
@@ -4,18 +4,21 @@
     box-sizing: border-box;    
 }
 body{
-    font-family: 'Open Sans', sans-serif;    
+    font-family: 'Open Sans', sans-serif;        
 }
 .icono{
     animation: moverIzquierda 1s ease-in;
+}
+.wrapper{
+    height: 100vh;
 }
 header{
     background: #a8ff78;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: auto;
-    padding: 48px;
-    width: 100%;
+    height: 80%;
+    padding: 48px;    
+    width: 100%;    
 }
 nav{
     position: fixed;
@@ -75,7 +78,8 @@ img{
     background-color: rgba(255, 255, 255, 0.637);
 }
 .wave{
-    height: 100px;
+    /* height: 100px; */
+    height: 10%;
     width: 100%;
     background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
