Portfolio avanzando, cards agregados, añadiendo mas estilos

--- a/estilos.css
+++ b/estilos.css
@@ -6,6 +6,9 @@
 body{
     font-family: 'Open Sans', sans-serif;        
 }
+.credits{
+    display: none;
+}
 .icono{
     animation: moverIzquierda 1s ease-in;
     width: 100%;
@@ -230,3 +233,44 @@ img{
         font-size: 15px;
     }
 }
+
+/*PORTFOLIO*/
+.subtitle{
+    text-align: center;
+}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    background-color: aliceblue;
+    border-radius: 6px;
+    overflow: hidden;
+    padding: 10px;
+  }
+  .card img{
+      margin-bottom: 10px;
+      height: 350px;
+  }
+  
+  .price {
+    color: grey;
+    font-size: 20px;
+  }
+  
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
