Pagina portfolio: 1era version completa

--- a/estilos.css
+++ b/estilos.css
@@ -239,12 +239,12 @@ img{
     text-align: center;
 }
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
     text-align: center;
     font-family: arial;
-    background-color: aliceblue;
+    background-color: rgb(219, 219, 250);
     border-radius: 6px;
     overflow: hidden;
     padding: 10px;
