--- a/estilos.css
+++ b/estilos.css
@@ -73,6 +73,9 @@ img{
 .textos h1{
     font-size: 80px;
     animation: moverDerecha 1s ease-in;
+
+    margin-top: 35px;
+    margin-bottom: 25px;
 }
 .textos h2{
     font-size: 30px;
@@ -272,5 +275,49 @@ img{
   }
   
   .card button:hover {
+    opacity: 0.7;
+  }
+
+  /*CONTACT*/
+  .cardContact {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    background-color: rgb(201, 201, 201);
+    border-radius: 5px;
+    overflow: hidden;
+    padding-bottom: 15px;
+  }
+  .cardContact img{
+      height: 300px;
+  }
+  
+  .title {
+    color: grey;
+    font-size: 18px;
+  }
+  
+  button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+    border-radius: 5px;
+  }
+  
+  .cardContact a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;    
+  }
+  
+  button:hover,   .cardContact a:hover {
     opacity: 0.7;
   }
