Bug responsive cards and background fixed

--- a/estilos.css
+++ b/estilos.css
@@ -16,12 +16,17 @@ body{
 }
 .wrapper{
     height: 100vh;
+
+    background: #a8ff78;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: 100%;
 }
 header{
     background: #a8ff78;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 80%;
+    height: 90%;
     padding: 48px;    
     width: 100%;    
 }
@@ -97,11 +102,12 @@ img{
 }
 .wave{
     /* height: 100px; */
-    height: 10%;
+    height: 20%;
     width: 100%;
     background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- 
+    bottom: 0;
+    /* position: fixed; */
 }
 .enlaces{
     position: fixed;
@@ -251,6 +257,7 @@ img{
     border-radius: 6px;
     overflow: hidden;
     padding: 10px;
+    margin-bottom: 20px;    
   }
   .card img{
       margin-bottom: 10px;
